--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A layout example that shows off a responsive product landing page.">
+    <meta name="description" content="Compteur des signatures pour le référendum sur la privatisation d'Aéroport de Paris">
     <title>Compteur Référendum ADP</title>
     
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
